# take-off-data-platform

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  boilerplate.py  install.sh  launch-scheduler.sh  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yml
airflow_dags/: aggregation_dag.py  boilerplate_dag.py  dummy_dag.py  get_latest_repo_dag.py
dags/: foo_dag.py
profiles/: config_dev.yaml
profiles/dev/: user.yml
reporting/: aggregation.py  boilerplate.py  formatting.py
store/: input.csv  output.csv
testing/: fixtures.py
tests/: aggregation_test.py  boilerplate_test.py  dag_test.py  databricks_test.py  formatting_test.py  notebook_test.py  system_test.py
utils/: databricks.py  error_handling.py  hooks.py  notebook_utils.py  operators.py  schema.py  spark.py
utils/log4j/: log4j-driver.properties
