[metadata]
name = find_your_way
version = attr: reporting.__version__
description = A simple reporting tool for FYW Open Data Platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marouenes/scheduler
author = Marouane Skandaji
author_email = marouane.skandaji@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
project_urls =
    Source Code = https://github.com/maoruenes/scheduler
    Bug Tracker = https://github.com/maoruenes/scheduler/issues

[options]
packages = find:
install_requires =
    apache-airflow-providers-apache-spark==2.0.2
python_requires = >=3.6
include_package_data = True

[options.extras_require]
build =
    build
    twine
    wheel
dev =
    black
    build
    isort
    pre-commit
    pylint
    pytest
    pytest-cov
    pytest-mock
docs =
    sphinx
    sphinx-rtd-theme
qa =
    black
    isort
    pre-commit
    pylint
test =
    pytest
    pytest-cov
    pytest-mock

[bdist_wheel]
python-tag = py3

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 99

[flake8]
max_line_length = 99
